# ml_network_modeling

./: Makefile  README.org  dune-project  links.json  ml_network_modeling.opam
client/: dune  main.ml  vega.ml
data/: clos.json  comms.json
lib/: conn.ml  conn.mli  conn_intf.ml  device_intf.ml  device_utils.ml  device_utils.mli  dune  level1_intf.ml  level2_intf.ml  link.ml  link.mli  link_intf.ml  node.ml  node.mli  node_intf.ml  op.ml  op.mli  op_intf.ml  optimizer_state.ml  orchestrator.ml  serialize.ml  stats.ml  stats.mli  switch_intf.ml  tensor.ml  tensor_intf.ml  transformer.ml  transformer.mli  transformer_intf.ml  transformer_wl.ml  transformer_wl.mli  transformers.ml  units.ml  workload_intf.ml  workloads.ml
recipe/: graph.vg.json  reduce.vg.json  time.vg.json
recipes/: graph.json  multi.json
server/: dune  main.ml
test/: dune
